--- a/style.css
+++ b/style.css
@@ -126,6 +126,8 @@ h1 {
     font-size: 18px;
     margin-bottom: 20px;
     font-weight: bold;
+  text-align: center;
+  }
 }
 
 /* Варианты ответа */
