--- a/style.css
+++ b/style.css
@@ -98,6 +98,9 @@ h1 {
    font-size: 24px; 
    color: #333; 
    transition: .2s all ease-in-out;
+     display: flex;
+   align-items: center;
+   justify-content: center;
 }
 
 .icon-btn:hover,
